Unmodifiable fix